--- a/app/views/home/front.html.erb
+++ b/app/views/home/front.html.erb
@@ -1,3 +1,9 @@
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 <div class="row">
   <div id="newsfeed" class="col-lg-12">
     <h4> <%= link_to "Inicia session", new_user_session_path %></h4>
